# cic-decimator

./: README.md  pruning.py  pyproject.toml  setup.cfg
src/cicdecimator/: Builder.py  __init__.py  cmdline.py
src/cicdecimator/templates/: filter.vhd  testbench.vhd
