[project]
name = "cic-decimator"
version = "0.0.1.dev1"
description = "VHDL CIC decimator generator"
readme = "README.md"
requires-python = ">=3.8.10"
keywords = ['vhdl', 'cic', 'dsp', 'fpga']
authors = [
	{name = "Rob Gaddi", email="rgaddi@highlandtechnology.com"}
]

[project.urls]
"Homepage" = "https://github.com/NJDFan/cic-decimator"

[project.scripts]
cic-decimator = "cicdecimator:main"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
