[project]
name = "cicdecimator"
version = "0.0.1.dev2"
description = "VHDL CIC decimator generator"
readme = "README.md"
requires-python = ">=3.8.10"
keywords = ['vhdl', 'cic', 'dsp', 'fpga']
authors = [
	{name = "Rob Gaddi", email="rgaddi@highlandtechnology.com"}
]

dependencies = [
	"Jinja2 ~= 3.1.2"
]

[project.urls]
"Homepage" = "https://github.com/NJDFan/cic-decimator"

[project.scripts]
generate-cic-decimator = "cicdecimator:cmdline.main"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
