[metadata]
name = cicdecimator
version = 0.0.1.dev3
author = Rob Gaddi
author_email = rgaddi@highlandtechnology.com
description = VHDL CIC decimator generator
long_description = file:README.md
url = https://github.com/NJDFan/cic-decimator
keywords = vhdl cic dsp fpga

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8.10
include_package_data = True
zip_safe = True
install_requires = 
    Jinja2 ~= 3.1.2
    numpy ~= 1.17

[options.package_data]
cic_decimator = templates/*.txt

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    generate-cic-decimator = cicdecimator.cmdline:main
